--- a/campians.html
+++ b/campians.html
@@ -325,10 +325,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$6400</span>
+                                    <span class="me-1">Goals:</span><span>£6400</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$3700</span>
+                                    <span class="me-1">Raised:</span><span>£3700</span>
                                 </div>
                             </div>
                         </div>
@@ -357,10 +357,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$24300</span>
+                                    <span class="me-1">Goals:</span><span>£24300</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$23700</span>
+                                    <span class="me-1">Raised:</span><span>£23700</span>
                                 </div>
                             </div>
                         </div>
@@ -434,10 +434,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$24300</span>
+                                    <span class="me-1">Goals:</span><span>£24300</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$23700</span>
+                                    <span class="me-1">Raised:</span><span>£23700</span>
                                 </div>
                             </div>
                         </div>
@@ -466,10 +466,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$6400</span>
+                                    <span class="me-1">Goals:</span><span>£6400</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$3700</span>
+                                    <span class="me-1">Raised:</span><span>£3700</span>
                                 </div>
                             </div>
                         </div>
@@ -498,10 +498,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$24300</span>
+                                    <span class="me-1">Goals:</span><span>£24300</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$23700</span>
+                                    <span class="me-1">Raised:</span><span>£23700</span>
                                 </div>
                             </div>
                         </div>
@@ -533,10 +533,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$24300</span>
+                                    <span class="me-1">Goals:</span><span>£24300</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$23700</span>
+                                    <span class="me-1">Raised:</span><span>£23700</span>
                                 </div>
                             </div>
                         </div>
@@ -565,10 +565,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$6400</span>
+                                    <span class="me-1">Goals:</span><span>£6400</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$3700</span>
+                                    <span class="me-1">Raised:</span><span>£3700</span>
                                 </div>
                             </div>
                         </div>
@@ -597,10 +597,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$24300</span>
+                                    <span class="me-1">Goals:</span><span>£24300</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$23700</span>
+                                    <span class="me-1">Raised:</span><span>23700</span>
                                 </div>
                             </div>
                         </div>
@@ -709,8 +709,8 @@
                             </a>
 
                             <div class="footer-content">
-                                <p class="mb-1">09 : 00 AM - 10 : 30 PM</p>
-                                <p>Saturday - Thursday</p>
+                                <p class="mb-1">8am - 8pm</p>
+                                <p>Monday - Sunday</p>
                             </div>
                         </div>
                     </div>
@@ -726,7 +726,7 @@
                     <ul class="brand-logo wow fadeInRight" data-wow-delay=".5s">
                         <li>
                             <a class="text-white" href="admin.html">
-                                Designed By <span class="text-underline text-theme-color2">Exdesigners</span>
+                                <span class="text-underline text-theme-color2"></span>
                             </a>
                         </li>
                     </ul>
