--- a/causes-details.html
+++ b/causes-details.html
@@ -3,6 +3,7 @@
 <!--<< Header Area >>-->
 
 <head>
+
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,6 +27,7 @@
     <!--<< Main.css >>-->
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
+
 
 <body>
 
@@ -720,8 +722,8 @@
                             </a>
 
                             <div class="footer-content">
-                                <p class="mb-1">09 : 00 AM - 10 : 30 PM</p>
-                                <p>Saturday - Thursday</p>
+                                <p class="mb-1">8am - 8pm</p>
+                                <p>Monday - Sunday</p>
                             </div>
                         </div>
                     </div>
@@ -737,7 +739,7 @@
                     <ul class="brand-logo wow fadeInRight" data-wow-delay=".5s">
                         <li>
                             <a class="text-white" href="admin.html">
-                                Designed By <span class="text-underline text-theme-color2">Exdesigners</span>
+                                <span class="text-underline text-theme-color2"></span>
                             </a>
                         </li>
                     </ul>
