--- a/error.html
+++ b/error.html
@@ -406,8 +406,8 @@
                             </a>
 
                             <div class="footer-content">
-                                <p class="mb-1">09 : 00 AM - 10 : 30 PM</p>
-                                <p>Saturday - Thursday</p>
+                                <p class="mb-1">8am - 8pm</p>
+                                <p>Monday - Sunday</p>
                             </div>
                         </div>
                     </div>
@@ -423,7 +423,7 @@
                     <ul class="brand-logo wow fadeInRight" data-wow-delay=".5s">
                         <li>
                             <a class="text-white" href="admin.html">
-                                Designed By <span class="text-underline text-theme-color2">Exdesigners</span>
+                                <span class="text-underline text-theme-color2"></span>
                             </a>
                         </li>
                     </ul>
