--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                     <i class="fal fa-clock"></i>
                                 </div>
                                 <div class="offcanvas__contact-text">
-                                    <a target="_blank" href="#">Mod-friday, 09am -05pm</a>
+                                    <a target="_blank" href="#">Monday-friday, 09am-05pm</a>
                                 </div>
                             </li>
                             <li class="d-flex align-items-center">
@@ -769,11 +769,11 @@
                                     </form>
                                     <ul class="selectPricing">
                                         <li class="listItem" data-amount="0">Custom Amount</li>
-                                        <li class="listItem active" data-amount="20">$20</li>
-                                        <li class="listItem" data-amount="40">$40</li>
-                                        <li class="listItem" data-amount="60">$60</li>
-                                        <li class="listItem" data-amount="80">$80</li>
-                                        <li class="listItem" data-amount="100">$100</li>
+                                        <li class="listItem active" data-amount="20">£20</li>
+                                        <li class="listItem" data-amount="40">£40</li>
+                                        <li class="listItem" data-amount="60">£60</li>
+                                        <li class="listItem" data-amount="80">£80</li>
+                                        <li class="listItem" data-amount="100">£100</li>
                                     </ul>
                                 </div>
                             </div>
@@ -1184,8 +1184,8 @@
                             </a>
 
                             <div class="footer-content">
-                                <p class="mb-1">09 : 00 AM - 10 : 30 PM</p>
-                                <p>Saturday - Thursday</p>
+                                <p class="mb-1">8am - 8pm</p>
+                                <p>Monday - Sunday</p>
                             </div>
                         </div>
                     </div>
@@ -1201,7 +1201,7 @@
                     <ul class="brand-logo wow fadeInRight" data-wow-delay=".5s">
                         <li>
                             <a class="text-white" href="admin.html">
-                                Designed By <span class="text-underline text-theme-color2">Exdesigners</span>
+                                 <span class="text-underline text-theme-color2"></span>
                             </a>
                         </li>
                     </ul>
