--- a/campians.html
+++ b/campians.html
@@ -141,7 +141,7 @@
                                     <i class="fal fa-clock"></i>
                                 </div>
                                 <div class="offcanvas__contact-text">
-                                    <a target="_blank" href="#">Mod-friday, 09am -05pm</a>
+                                    <a target="_blank" href="#">Monday-Sunday, 8am - 9pm</a>
                                 </div>
                             </li>
                             <li class="d-flex align-items-center">
@@ -600,7 +600,7 @@
                                     <span class="me-1">Goals:</span><span>£24300</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>23700</span>
+                                    <span class="me-1">Raised:</span><span>£23700</span>
                                 </div>
                             </div>
                         </div>
