--- a/team.html
+++ b/team.html
@@ -110,8 +110,7 @@
                         </div>
                     </div>
                     <p class="text d-none d-xl-block">
-                        Nullam dignissim, ante scelerisque the is euismod fermentum odio sem semper the is erat, a
-                        feugiat leo urna eget eros. Duis Aenean a imperdiet risus.
+                        Proper dignity, before the difficulty, is the fermentation of hate and is always right. A benefit like a lion is self-generated. Avoid imperfection and strive for progress.
                     </p>
                     <div class="mobile-menu fix mb-3"></div>
                     <div class="offcanvas__contact">
@@ -567,9 +566,7 @@
                             </div>
                             <div class="footer-content">
                                 <p>
-                                    Phasellus ultricies aliquam volutpat ullamcorper laoreet neque, a lacinia
-                                    curabitur
-                                    lacinia mollis
+                                    Efficient movement enhances control, while structure remains strong. Careful coordination fosters gentle and flexible growth.
                                 </p>
                                 <div class="social-icon d-flex align-items-center">
                                     <a href="#"><i class="fab fa-facebook-f"></i></a>
