--- a/blog-details.html
+++ b/blog-details.html
@@ -321,53 +321,27 @@
                                     <h3 class="wow fadeInUp" data-wow-delay=".4s">Humanitarian aid in times of crisis
                                         and calamity</h3>
                                     <p class="mb-3 wow fadeInUp" data-wow-delay=".6s">
-                                        Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                        dolore of magna aliqua. Ut enim ad minim veniam, made of owl the quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea dolor commodo consequat. Duis
-                                        aute irure and dolor in reprehenderit.
+                                        Consectetur is about mastering the art of focus, while enduring effort and challenges. Seeking clarity and finding purpose, one must carefully balance action with thought, avoiding unnecessary pain. Moving with awareness, the goal is progress without overexertion, finding harmony in action and reflection.
+
+
                                     </p>
                                     <p class="mb-3 wow fadeInUp" data-wow-delay=".8s">
-                                        The is ipsum dolor sit amet consectetur adipiscing elit. Fusce eleifend porta
-                                        arcu In hac habitasse the is platea augue thelorem turpoi dictumst. In lacus
-                                        libero faucibus at malesuada sagittis placerat eros sed istincidunt augue ac
-                                        ante rutrum sed the is sodales augue consequat.
+                                        The path of effort focuses on clarity and purpose. Structure guides actions, and transitions are balanced with control. In the face of challenges, flexibility and perseverance allow progress. The direction remains steady, with purpose in every movement.
                                     </p>
                                     <p class="wow fadeInUp" data-wow-delay="1s">
-                                        Nulla facilisi. Vestibulum tristique sem in eros eleifend imperdiet. Donec quis
-                                        convallis neque. In id lacus pulvinar lacus, eget vulputate lectus. Ut viverra
-                                        bibendum lorem, at tempus nibh mattis in. Sed a massa eget lacus consequat
-                                        auctor.
+                                        Nothing is difficult. The path moves smoothly, with challenges overcome through flexibility and control. Stay steady, and balance actions with thought. Live with focus and purpose, progressing through each step. Let ease and clarity guide your efforts.
                                     </p>
                                     <div class="hilight-text mt-4 mb-4 wow fadeInUp" data-wow-delay=".8s">
                                         <div class="text-center"> <img src="assets/img/icon/quoteIcon.svg" alt="icon">
                                         </div>
-                                        <p class="mt-3">Pellentesque sollicitudin congue dolor non aliquam. Morbi
-                                            volutpat, nisi vel
-                                            ultricies urnacondimentum, sapien neque
-                                            lobortis tortor, quis efficitur mi ipsum eu metus. Praesent eleifend orci
-                                            sit
-                                            amet
-                                            est vehicula.
+                                        <p class="mt-3">Solicitations pull in strongly but not excessively. Flexibility comes naturally, with the flow of actions guided by both firmness and control. Gracefully moving with the challenges, efficiency becomes second nature as progress is made.
                                         </p>
                                     </div>
                                     <p class="mt-4 mb-3 wow fadeInUp" data-wow-delay="1s">
-                                        Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam
-                                        in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula
-                                        consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis
-                                        imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu.
-                                        Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet.
-                                        Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam
-                                        condimentum, vel euismod erat placerat. In iaculis arcu eros.
+                                        Lorem ipsum dolor sit amet, a phrase used as placeholder text, represents balance in motion. Emphasizing the elegance of movement and flexibility, this passage focuses on control, purpose, and fluidity. Confidence and structure are essential for consistent growth, aligning progress with intention.
                                     </p>
                                     <p class="pb-4 border-bottom wow fadeInUp" data-wow-delay="1.2s">
-                                        Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                        dolore of magna aliqua. Ut enim ad minim veniam, made of owl the quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea dolor commodo consequat. Duis
-                                        aute irure and dolor in reprehenderit.Consectetur adipisicing elit, sed do
-                                        eiusmod tempor incididunt ut labore et dolore of magna aliqua. Ut enim ad minim
-                                        veniam, made of owl the quis nostrud exercitation ullamco laboris nisi ut
-                                        aliquip ex ea dolor commodo consequat. Duis aute irure and dolor in
-                                        reprehenderit.
+                                        Consectetur adipiscing elit, but goes through hard times while working and enduring pain. To avoid discomfort, made of owl, the person performs tasks without hesitation. Pain is endured for the sake of progress. Pleasure is found in overcoming, while difficulties are faced responsibly. Again, enduring pain while working and striving for progress..
                                     </p>
                                 </div>
                             </div>
@@ -390,10 +364,7 @@
                                                 <a href="blog-details.html" class="reply">Reply</a>
                                             </div>
                                         </div>
-                                        <p class="mt-10 mb-0">Neque porro est qui dolorem ipsum quia quaed inventor
-                                            veritatis et quasi
-                                            architecto var sed efficitur turpis gilla sed
-                                            sit amet finibus eros. Lorem Ipsum is simply dummy
+                                        <p class="mt-10 mb-0">There is no one who suffers pain because they seek the truth and nearly become the architect, but it is made effective by difficult efforts, yet grounded in steady progress.
                                         </p>
                                     </div>
                                 </div>
@@ -412,10 +383,7 @@
                                                 <a href="blog-details.html" class="reply">Reply</a>
                                             </div>
                                         </div>
-                                        <p class="mt-10 mb-0">Neque porro est qui dolorem ipsum quia quaed inventor
-                                            veritatis et quasi
-                                            architecto var sed efficitur turpis gilla sed
-                                            sit amet finibus eros. Lorem Ipsum is simply dummy
+                                        <p class="mt-10 mb-0">There is no one who suffers pain because they seek the truth and nearly become the architect, but it is made effective by difficult efforts, yet grounded in steady progress.
                                         </p>
                                     </div>
                                 </div>
