--- a/campians.html
+++ b/campians.html
@@ -626,9 +626,7 @@
                             </div>
                             <div class="footer-content">
                                 <p>
-                                    Phasellus ultricies aliquam volutpat ullamcorper laoreet neque, a lacinia
-                                    curabitur
-                                    lacinia mollis
+                                    Efficient movement enhances control, while structure remains strong. Careful coordination fosters gentle and flexible growth.
                                 </p>
                                 <div class="social-icon d-flex align-items-center">
                                     <a href="#"><i class="fab fa-facebook-f"></i></a>
