--- a/admin.html
+++ b/admin.html
@@ -402,15 +402,15 @@
                                         </div>
                                         <div class="col-lg-6 wow fadeInUp" data-wow-delay=".2s">
                                             <div class="form-clt">
-                                                <input type="text" name="number" id="number" placeholder="Phone Number">
+                                                <input type="text" name="number" id="number" placeholder=" ">
                                                 <div class="icon">
                                                     <i class="fa-regular fa-phone"></i>
-                                                </div>
+                                                </div> 
                                             </div>
                                         </div>
                                         <div class="col-lg-6 wow fadeInUp" data-wow-delay=".4s">
                                             <div class="form-clt">
-                                                <input type="text" name="email" id="email3" placeholder="Email Address">
+                                                <input type="text" name="email" id="email3" placeholder=" ">
                                                 <div class="icon">
                                                     <i class="fa-regular fa-envelope"></i>
                                                 </div>
