--- a/index.html
+++ b/index.html
@@ -447,10 +447,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$24300</span>
+                                    <span class="me-1">Goals:</span><span>£24300</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$23700</span>
+                                    <span class="me-1">Raised:</span><span>£23700</span>
                                 </div>
                             </div>
                         </div>
@@ -479,10 +479,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$6400</span>
+                                    <span class="me-1">Goals:</span><span>£6400</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$3700</span>
+                                    <span class="me-1">Raised:</span><span>£3700</span>
                                 </div>
                             </div>
                         </div>
@@ -511,10 +511,10 @@
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
-                                    <span class="me-1">Goals:</span><span>$24300</span>
+                                    <span class="me-1">Goals:</span><span>£24300</span>
                                 </div>
                                 <div class="raised">
-                                    <span class="me-1">Raised:</span><span>$23700</span>
+                                    <span class="me-1">Raised:</span><span>£23700</span>
                                 </div>
                             </div>
                         </div>
@@ -710,7 +710,7 @@
                             </div>
                             <h2 class="mt-15 text-white wow fadeInUp" data-wow-delay=".3s">Every dollar counts:
                                 invest in a <span>brighter future</span></h2>
-                            <p class="text-center text-white wow fadeInUp" data-wow-delay=".5s">Aperson who
+                            <p class="text-center text-white wow fadeInUp" data-wow-delay=".5s">A person who
                                 donates time, money, experience, skills or talent to help create a better world
                                 anyone can be a philanthropist.</p>
                         </div>
@@ -737,7 +737,7 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="contact-form">
-                                                    <label class="contact-label">$</label>
+                                                    <label class="contact-label">£</label>
                                                     <input class="form-control contact-input left_default_amount"
                                                         type="number" min="1" value="50" placeholder="$50">
                                                 </div>
@@ -746,11 +746,11 @@
                                     </form>
                                     <ul class="selectPricing">
                                         <li class="listItem" data-amount="0">Custom Amount</li>
-                                        <li class="listItem active" data-amount="20">$20</li>
-                                        <li class="listItem" data-amount="40">$40</li>
-                                        <li class="listItem" data-amount="60">$60</li>
-                                        <li class="listItem" data-amount="80">$80</li>
-                                        <li class="listItem" data-amount="100">$100</li>
+                                        <li class="listItem active" data-amount="20">£20</li>
+                                        <li class="listItem" data-amount="40">£40</li>
+                                        <li class="listItem" data-amount="60">£60</li>
+                                        <li class="listItem" data-amount="80">£80</li>
+                                        <li class="listItem" data-amount="100">£100</li>
                                     </ul>
                                 </div>
                                 <div class="tab-pane fade" id="pills-give-monthly" role="tabpanel"
@@ -759,7 +759,7 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="contact-form">
-                                                    <label class="contact-label">$</label>
+                                                    <label class="contact-label">£</label>
                                                     <input class="form-control contact-input left_default_amount"
                                                         type="number" min="1" value="50" placeholder="$50">
                                                 </div>
