--- a/admin.html
+++ b/admin.html
@@ -110,7 +110,8 @@
                         </div>
                     </div>
                     <p class="text d-none d-xl-block">
-                        Proper dignity, before the difficulty, is the fermentation of hate and is always right. A benefit like a lion is self-generated. Avoid imperfection and strive for progress.
+                        Nullam dignissim, ante scelerisque the is euismod fermentum odio sem semper the is erat, a
+                        feugiat leo urna eget eros. Duis Aenean a imperdiet risus.
                     </p>
                     <div class="mobile-menu fix mb-3"></div>
                     <div class="offcanvas__contact">
@@ -138,7 +139,7 @@
                                     <i class="fal fa-clock"></i>
                                 </div>
                                 <div class="offcanvas__contact-text">
-                                    <a target="_blank" href="#">Monday - Sunday, 8am -8pm</a>
+                                    <a target="_blank" href="#">Mod-friday, 09am -05pm</a>
                                 </div>
                             </li>
                             <li class="d-flex align-items-center">
@@ -358,21 +359,16 @@
                                         </div>
                                         <div class="col-lg-6 wow fadeInUp" data-wow-delay=".4s">
                                             <div class="form-clt">
-
-                                                <input type="text" name="number" id="number" placeholder=" ">
-                                                <div class="icon">
-                                                    <i class="fa-regular fa-phone"></i>
-                                                </div> 
-
                                                 <input type="text" name="email" id="email3" type="passoword"placeholder="Passoword">
         
-
                                             </div>
                                         </div>
                                         <div class="col-lg-6 wow fadeInUp" data-wow-delay=".4s">
                                             <div class="form-clt">
                                                 <div class="btn-wrapper">
-                                                </div>                                       
+                                                    <a href="newadminregister.html"> Create Admin User</a>
+                                                </div>
+                                        
                                             </div>
                                         </div>
                                         <div class="col-lg-12 wow fadeInUp" data-wow-delay=".4s">
@@ -403,7 +399,9 @@
                             </div>
                             <div class="footer-content">
                                 <p>
-                                    Efficient movement enhances control, while structure remains strong. Careful coordination fosters gentle and flexible growth.
+                                    Phasellus ultricies aliquam volutpat ullamcorper laoreet neque, a lacinia
+                                    curabitur
+                                    lacinia mollis
                                 </p>
                                 <div class="social-icon d-flex align-items-center">
                                     <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -481,8 +479,8 @@
                             </a>
 
                             <div class="footer-content">
-                                <p class="mb-1">8am - 8pm</p>
-                                <p>Monday - Sunday</p>
+                                <p class="mb-1">09 : 00 AM - 10 : 30 PM</p>
+                                <p>Saturday - Thursday</p>
                             </div>
                         </div>
                     </div>
@@ -498,7 +496,7 @@
                     <ul class="brand-logo wow fadeInRight" data-wow-delay=".5s">
                         <li>
                             <a class="text-white" href="admin.html">
-                                 <span class="text-underline text-theme-color2"></span>
+                                Designed By <span class="text-underline text-theme-color2">Exdesigners</span>
                             </a>
                         </li>
                     </ul>
