--- a/campians.html
+++ b/campians.html
@@ -112,9 +112,7 @@
                         </div>
                     </div>
                     <p class="text d-none d-xl-block">
-                        Nullam dignissim, ante scelerisque the is euismod fermentum odio sem semper the is erat, a
-                        feugiat leo urna eget eros. Duis Aenean a imperdiet risus.
-                    </p>
+                        Proper dignity, before the difficulty, is the fermentation of hate and is always right. A benefit like a lion is self-generated. Avoid imperfection and strive for progress.
                     <div class="mobile-menu fix mb-3"></div>
                     <div class="offcanvas__contact">
                         <h4>Contact Info</h4>
@@ -206,6 +204,7 @@
                                                     <ul class="submenu">
                                                         <li><a class="active" href="campians.html">Causes</a></li>
                                                         <li><a href="causes-details.html">Causes Details</a></li>
+                                                        <li><a href="refund.html">Refund</a></li>
                                                     </ul>
                                                 </li>
                                                 <li class="has-dropdown">
@@ -280,15 +279,10 @@
                     <ul class="breadcrumb-items wow fadeInUp" data-wow-delay=".3s">
                         <li>
                             <a href="index.html">
-                                Home
+                                
                             </a>
                         </li>
-                        <li>
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </li>
-                        <li>
-                            Causes
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
