admin login-admin-page

--- a/starter.html
+++ b/starter.html
@@ -98,7 +98,7 @@
                 const adminPassword = document.getElementById('adminPassword').value;
         
                 if (adminEmail === 'admin' && adminPassword === 'admin') {
-                    window.location.href = 'index.html';
+                    window.location.href = 'admin.html';
                 } else {
                     alert('Invalid credentials');
                 }
