--- a/admin.html
+++ b/admin.html
@@ -100,7 +100,7 @@
                     <div class="offcanvas__top mb-5 d-flex justify-content-between align-items-center">
                         <div class="offcanvas__logo">
                             <a href="index.html">
-                                <img src="assets/img/logo/white-logo.svg" alt="logo-img">
+                                  <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="5" height="6" alt="Big Alliance">
                             </a>
                         </div>
                         <div class="offcanvas__close">
@@ -179,7 +179,7 @@
                             <div class="header-left">
                                 <div class="logo">
                                     <a href="index.html" class="header-logo">
-                                        <img src="assets/img/logo/white-logo.svg" alt="logo-img">
+                                          <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="5" height="6" alt="Big Alliance">
                                     </a>
                                 </div>
                             </div>
@@ -341,9 +341,10 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-12 col-lg-7">
+                    <div class="col-12 col-md-12 col-lg-6">
                         User Login
                         <div class="contact-form">
+
                             <div class="contact-form-items">
                                 <form action="contact.php" id="contact-form" method="POST">
                                     <div class="row g-4">
@@ -379,6 +380,35 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-12 col-md-12 col-lg-6">
+                        Verfiy Donor
+                        <div class="contact-form">
+                                <div class="contact-form-items">
+                                    <form action="contact.php" id="contact-form" method="POST">
+                                        <div class="row g-4">
+                                            <div class="col-lg-12 wow fadeInUp" data-wow-delay=".2s">
+                                                <div class="form-clt">
+                                                    <select name="donorName" id="donorName" required>
+                                                        <option value="">Select a donor</option>
+                                                        <option value="donor1">Donor 1</option>
+                                                        <option value="donor2">Donor 2</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="column-gap-lg-3 wow fadeInUp" data-wow-delay=".4s">
+                                                <button type="submit" class="btn-wrapper wow fadeInUp" data-wow-delay=".5s" onclick="createNewDonor()">
+                                                    <span class="theme-btn style3">Approve</span> <span class="arrow-btn style2"><i class="fa-solid fa-arrow-up-right"></i></span>
+                                                </button>
+                                                <div class="column-gap-lg-4 wow fadeInUp" data-wow-delay=".4s"><button type="submit" class="btn-wrapper wow fadeInUp" data-wow-delay=".5s" onclick="denyDonor()">
+                                                    <span class="theme-btn style3">Deny </span> <span class="arrow-btn style2"><i class="fa-solid fa-arrow-up-right"></i></span>
+                                                </button></div>
+                                                
+                                            </div>
+                                        </div>
+                                    </form> 
+                                </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -392,7 +422,7 @@
                         <div class="single-footer-widget">
                             <div class="widget-head">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/white-logo.svg" alt="logo-img">
+                                      <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="5" height="6" alt="Big Alliance">
                                 </a>
                             </div>
                             <div class="footer-content">
