--- a/newadminregister.html
+++ b/newadminregister.html
@@ -100,7 +100,7 @@
                     <div class="offcanvas__top mb-5 d-flex justify-content-between align-items-center">
                         <div class="offcanvas__logo">
                             <a href="index.html">
-                                <img src="assets/img/logo/white-logo.svg" alt="logo-img">
+                                  <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" alt="Big Alliance">
                             </a>
                         </div>
                         <div class="offcanvas__close">
@@ -179,7 +179,7 @@
                             <div class="header-left">
                                 <div class="logo">
                                     <a href="index.html" class="header-logo">
-                                        <img src="assets/img/logo/white-logo.svg" alt="logo-img">
+     <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="200" height="75" alt="Big Alliance">
                                     </a>
                                 </div>
                             </div>
@@ -361,7 +361,7 @@
                         <div class="single-footer-widget">
                             <div class="widget-head">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/white-logo.svg" alt="logo-img">
+ <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="200" height="75" alt="Big Alliance">
                                 </a>
                             </div>
                             <div class="footer-content">
