--- a/index.html
+++ b/index.html
@@ -151,9 +151,7 @@
                             </li>
                         </ul>
                         <div class="header-button mt-4">
-                            <a href="admin.html" class="theme-btn text-center">
-                                <span>Admin Login<i class="fa-solid fa-arrow-right-long"></i></span>
-                            </a>
+                            
                         </div>
                         <div class="social-icon d-flex align-items-center">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -207,7 +205,7 @@
                                                 </li>
                                                 <li class="has-dropdown">
                                                     <a href="#">
-                                                        Pages
+                                                   Reports and DashBord
                                                         <i class="fa-regular fa-plus"></i>
                                                     </a>
                                                     <ul class="submenu">
