ready to dpnate

--- a/causes-details.html
+++ b/causes-details.html
@@ -326,7 +326,7 @@
                                     </div> 
 
                                     <div class="btn-wrapper mx-auto mt-3 wow fadeInUp" data-wow-delay=".5s"  data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                         <span class="theme-btn"> Donate Now!!!  </span><span class="arrow-btn"><i class="fa-solid fa-arrow-up-right"></i></span> 
+                                         <span class="theme-btn"> Ready to Donate Now </span><span class="arrow-btn"><i class="fa-solid fa-arrow-up-right"></i></span> 
                                     </div>
 
                                       <!-- Modal -->
