api-Newly created-admin

--- a/newadminregister.html
+++ b/newadminregister.html
@@ -297,11 +297,11 @@
                     <div class="col-12 col-md-12 col-lg-7">
                         <div class="contact-form">
                             <div class="contact-form-items">
-                                <form action="contact.php" id="contact-form" method="POST">
+                                <form action="contact.php" id="newadminUser" method="POST">
                                     <div class="row g-4">
                                         <div class="col-lg-6 wow fadeInUp" data-wow-delay=".2s">
                                             <div class="form-clt">
-                                                <input type="text" name="name" id="name" placeholder="First Name">
+                                                <input type="text" name="fname" id="fname" placeholder="First Name">
                                                 <div class="icon">
                                                     <i class="fa-regular fa-user"></i>
                                                 </div>
@@ -309,7 +309,7 @@
                                         </div>
                                         <div class="col-lg-6 wow fadeInUp" data-wow-delay=".4s">
                                             <div class="form-clt">
-                                                <input type="text" name="name" id="name12" placeholder="Last Name">
+                                                <input type="text" name="lname" id="lname" placeholder="Last Name">
                                                 <div class="icon">
                                                     <i class="fa-regular fa-user"></i>
                                                 </div>
@@ -317,7 +317,7 @@
                                         </div>
                                         <div class="col-lg-6 wow fadeInUp" data-wow-delay=".2s">
                                             <div class="form-clt">
-                                                <input type="text" name="number" id="number" placeholder="Phone Number">
+                                                <input type="number" name="phnumber" id="phnumber" placeholder="Phone Number">
                                                 <div class="icon">
                                                     <i class="fa-regular fa-phone"></i>
                                                 </div>
@@ -325,7 +325,7 @@
                                         </div>
                                         <div class="col-lg-6 wow fadeInUp" data-wow-delay=".4s">
                                             <div class="form-clt">
-                                                <input type="text" name="email" id="email3" placeholder="Email Address">
+                                                <input type="text" name="newademail" id="newademail" placeholder="Email Address">
                                                 <div class="icon">
                                                     <i class="fa-regular fa-envelope"></i>
                                                 </div>
@@ -489,6 +489,8 @@
     <script src="assets/js/wow.min.js"></script>
     <!--<< Main.js >>-->
     <script src="assets/js/main.js"></script>
+
+    <script type="module" src="assets/js/create_new_Admin.js"></script>
 </body>
 
 </html>
