--- a/admin.html
+++ b/admin.html
@@ -291,7 +291,17 @@
     <section class="contact-section fix section-padding">
         <div class="contact-wrapper">
             <div class="container">
+                <div class="row" style="flex: content;">
+                    <div class="col-lg-12">
+                        <div class="header-button mt-lg-5">
+                            <a href="verfiydonor.html" class="theme-btn">
+                                <span>Verify Donor<i class="fa-solid fa-arrow-right-long"></i></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
+                   
                     <div class="col-12 col-md-12 col-lg-5">
                         Create New Campain
                            <!-- Create Campain-->
@@ -378,35 +388,6 @@
                                     </div>
                                 </form>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-12 col-lg-6">
-                        Verfiy Donor
-                        <div class="contact-form">
-                                <div class="contact-form-items">
-                                    <form action="contact.php" id="contact-form" method="POST">
-                                        <div class="row g-4">
-                                            <div class="col-lg-12 wow fadeInUp" data-wow-delay=".2s">
-                                                <div class="form-clt">
-                                                    <select name="donorName" id="donorName" required>
-                                                        <option value="">Select a donor</option>
-                                                        <option value="donor1">Donor 1</option>
-                                                        <option value="donor2">Donor 2</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                            <div class="column-gap-lg-3 wow fadeInUp" data-wow-delay=".4s">
-                                                <button type="submit" class="btn-wrapper wow fadeInUp" data-wow-delay=".5s" onclick="createNewDonor()">
-                                                    <span class="theme-btn style3">Approve</span> <span class="arrow-btn style2"><i class="fa-solid fa-arrow-up-right"></i></span>
-                                                </button>
-                                                <div class="column-gap-lg-4 wow fadeInUp" data-wow-delay=".4s"><button type="submit" class="btn-wrapper wow fadeInUp" data-wow-delay=".5s" onclick="denyDonor()">
-                                                    <span class="theme-btn style3">Deny </span> <span class="arrow-btn style2"><i class="fa-solid fa-arrow-up-right"></i></span>
-                                                </button></div>
-                                                
-                                            </div>
-                                        </div>
-                                    </form> 
-                                </div>
                         </div>
                     </div>
                 </div>
