--- a/verfiydonor.html
+++ b/verfiydonor.html
@@ -100,7 +100,7 @@
                     <div class="offcanvas__top mb-5 d-flex justify-content-between align-items-center">
                         <div class="offcanvas__logo">
                             <a href="index.html">
-                                  <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="5" height="6" alt="Big Alliance">
+                                  <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="100" height="75" alt="Big Alliance">
                             </a>
                         </div>
                         <div class="offcanvas__close">
@@ -179,7 +179,7 @@
                             <div class="header-left">
                                 <div class="logo">
                                     <a href="index.html" class="header-logo">
-                                          <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="5" height="6" alt="Big Alliance">
+                                          <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="100" height="75" alt="Big Alliance">
                                     </a>
                                 </div>
                             </div>
@@ -334,7 +334,7 @@
                         <div class="single-footer-widget">
                             <div class="widget-head">
                                 <a href="index.html">
-                                      <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="5" height="6" alt="Big Alliance">
+                                      <img src="https://images.squarespace-cdn.com/content/v1/5e53da2e922842434f3d7d88/1582554232317-AND5U7UB0Q1G5L1O3W0K/2020+BIG+logo+no+strapline+transparent.png?format=1500w" width="100" height="75" alt="Big Alliance">
                                 </a>
                             </div>
                             <div class="footer-content">
@@ -362,12 +362,6 @@
                                     <a href="team.html">
                                         <i class="fa-solid fa-chevrons-right"></i>
                                         Our Team
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="campians.html">
-                                        <i class="fa-solid fa-chevrons-right"></i>
-                                        Causes
                                     </a>
                                 </li>
                                 <li>
@@ -465,6 +459,7 @@
     <!--<< Main.js >>-->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/handle-api-endpoint-on-new-campain.js"></script>
+    <script src="assets/js/donor_approval_list.js"></script>
 </body>
 
 </html>
