comment donor-approl-list

--- a/starter.html
+++ b/starter.html
@@ -165,5 +165,6 @@
             $('#donorLogin').show(); // Show the login form
         });
     </script>
+    <script  type=module src="./assets/js/donor_approval_list.js"></script>
 </body>
 </html>
